build/cluster/004-puller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reader-puller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reader-puller
  template:
    metadata:
      labels:
        app: reader-puller
    spec:
      containers:
        - name: reader-puller
          image: $IMAGE
          imagePullPolicy: $IMAGE_POLICY
          command: ["/bin/sh", "-c", "./job/main.exe puller"]
