build/cluster/005-puller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: puller
  template:
    metadata:
      labels:
        app: puller
    spec:
      containers:
        - name: puller
          image: $IMAGE
          imagePullPolicy: $IMAGE_POLICY
          command: ["/bin/sh", "-c", "./job/main.exe puller"]
