build/cluster/006-feed-pruner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-pruner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed-pruner
  template:
    metadata:
      labels:
        app: feed-pruner
    spec:
      containers:
        - name: feed-pruner
          image: $IMAGE
          imagePullPolicy: $IMAGE_POLICY
          command: ["/bin/sh", "-c", "./job/main.exe feed-pruner"]
