build/cluster/006-item-pruner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reader-item-pruner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reader-item-pruner
  template:
    metadata:
      labels:
        app: reader-item-pruner
    spec:
      containers:
        - name: reader-item-pruner
          image: $IMAGE
          imagePullPolicy: $IMAGE_POLICY
          command: ["/bin/sh", "-c", "./job/main.exe item-pruner"]
$NODE_SELECTOR
