build/cluster/007-item-pruner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: item-pruner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: item-pruner
  template:
    metadata:
      labels:
        app: item-pruner
    spec:
      containers:
        - name: item-pruner
          image: $IMAGE
          imagePullPolicy: $IMAGE_POLICY
          command: ["/bin/sh", "-c", "./jobs/main.exe item-pruner"]
