build/cluster/007-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: reader-ui
spec:
  selector:
    app: reader-ui
  ports:
    - port: 3000
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reader-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reader-ui
  template:
    metadata:
      labels:
        app: reader-ui
    spec:
      containers:
        - name: reader-ui
          image: $UI_IMAGE
          ports:
            - containerPort: 80
          imagePullPolicy: $IMAGE_POLICY
$NODE_SELECTOR
