build/cluster/008-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
spec:
  tls:
  - hosts:
      - $HOST
    secretName: cert
  defaultBackend:
    service:
      name: server
      port:
        number: 8080
