build/cluster/009-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: server-ingress
spec:
  tls:
  - hosts:
      - $HOST
    secretName: reader-cert
  rules:
  - host: $HOST
    http:
      paths:
        - backend:
            service:
              name: server
              port:
                number: 8080
          path: /api/?(.*)
          pathType: Prefix
        - backend:
            service:
              name: ui
              port:
                number: 80
          path: /?(.*)
          pathType: Prefix
  defaultBackend:
    service:
      name: ui
      port:
        number: 80
